# programming-labs-2026

./: .gitignore  README.md
op-semester-1/lab06/: CMakeLists.txt  README.md
op-semester-1/lab06/src/: main.cpp
op-semester-1/lab07/: CMakeLists.txt
op-semester-1/lab07/src/: main.cpp
op-semester-2/lab01/: CMakeLists.txt  README.md
op-semester-2/lab02/: CMakeLists.txt  README.md
op-semester-2/lab02/src/: main.cpp
op-semester-2/lab03/: CMakeLists.txt
op-semester-2/lab03/src/: main.cpp
op-semester-2/lab04/: CMakeLists.txt  README.md
op-semester-2/lab04/src/: generateFile.cpp  main.cpp
op-semester-2/lab05/: CMakeLists.txt  README.md
op-semester-2/lab05/src/: main.cpp
op-semester-2/lab06/: CMakeLists.txt  README.md
op-semester-2/lab06/src/: main.cpp  state.cpp  state.h
op-semester-2/lab07/: README.md
op-semester-2/lab07/src/: main.cpp
ОП 1151 1 семестр/lab06/: .gitignore
ОП 1151 1 семестр/lab06/src/: main.cpp
ОП 1151 1 семестр/lab07/: CMakeLists.txt  README.md
ОП 2 семестр/lab01/src/: main.cpp
ОП 2 семестр/lab02/: README.md
ОП 2 семестр/lab03/: .gitignore  README.md
